Changes made from the "0.6" release to the "0.7" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed bug #1754660 (actually a partial fix. See explanations on bug #1754660
  on SourceForge.net)
- Renamed some type names (FT_ULong, FcChar8, ...) in order to make them more
  portable.
- Minimized the use of pthread_get_specific()/TlsGetValue() when only one thread
  is used and ELF TLS is not available since calls to those functions are
  expansive.
- Removed the useless QUESOGLC_STATIC_LIBRARY
- Modified QuesoGLC threading implementation in order to use ELF TLS when
  available. This allows to discard the expansive calls to pthread_get_specific.
- Removed the useless QUESOGLC_VERSION macro
- Removed __glcFaceDescGetCharMap() which were buggy for some fonts. Now uses
  Fontconfig patterns instead. This fixes a bug which created a new font for
  each newly rendered glyph.

Changes made from the "0.5" release to the "0.6" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed bug #1640256 : the advance vector now supports RTL strings
- Fixed a bug by disabling kerning when two successive characters of a string
  are not rendered with the same font.
- Modified __glcFaceDescGetFontFormat() to use FT_Get_X11_Font_Format(),
  whenever available, to detect the font format.
- Fixed a bug which caused a character that was not mapped to any font to be
  rendered wrongly the second time it is displayed when GLC_KERNING_QSO is
  enabled (bug reported by Brandon Casey).
- Added a test in the tests directory that checks if empty strings are
  correctly handled by the functions of QuesoGLC (no crash, no unexpected
  errors, no memory leaks).
- Modified the texture routines so that QuesoGLC tries several sizes of texture
  before giving up when rendering in GLC_TEXTURE mode with GLC_GL_OBJECTS
  disabled.
- Fixed global commands so that they can not execute GL commands since we can