@@ -11,13 +11,15 @@ noinst_PROGRAMS = glclogo \
 AM_CFLAGS = @PTHREAD_CFLAGS@ \
             @FREETYPE2_CFLAGS@ \
             @FONTCONFIG_CFLAGS@ \
-            @GLUT_CFLAGS@
+            @GLUT_CFLAGS@ \
+            @FRIBIDI_CFLAGS@
 
 LDADD = $(top_builddir)/build/libGLC.la \
         @GLUT_LIBS@ \
         @FONTCONFIG_LIBS@ \
         @FREETYPE2_LIBS@ \
-        @PTHREAD_LIBS@
+        @PTHREAD_LIBS@ \
+        @FRIBIDI_LIBS@
 
 glclogo_SOURCES = glclogo.c
 
